<resources>
    <string name="app_name">Charity</string>
    <string name="label_donate">Donate</string>
    <string name="label_donate_header">Donate</string>
    <string name="label_donate_name">Enter Name</string>
    <string name="label_donate_name_hint">John Doe</string>
    <string name="label_donate_token">Enter Token</string>
    <string name="label_donate_token_hint">abc_def_ghi</string>
    <string name="label_donate_amount">Amount</string>
    <string name="label_donate_amount_hint">e.g.TBH 100</string>
    <string name="label_donate_submit">Submit</string>
    <string name="label_common_processing_request">Transaction in progress..</string>
    <string name="label_invalid_name">Name not valid</string>
    <string name="label_invalid_token">Token not valid</string>
    <string name="label_invalid_amount">Amount not valid</string>
    <string name="label_request_cancelled">Request Cancelled!</string>
    <string name="label_reload">Reload</string>
</resources>
