<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRootDonate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.donate.screen.DonateActivity">

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nsvUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    style="@style/CharityLabelTextStyleBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:text="@string/label_donate_name" />

                <EditText
                    android:id="@+id/etvName"
                    style="@style/CharityEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:hint="@string/label_donate_name_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvToken"
                    style="@style/CharityLabelTextStyleBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:text="@string/label_donate_token" />

                <EditText
                    android:id="@+id/etvToken"
                    style="@style/CharityEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_donate_token_hint"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAmount"
                    style="@style/CharityLabelTextStyleBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:text="@string/label_donate_amount" />

                <EditText
                    android:id="@+id/etvAmount"
                    style="@style/CharityEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_donate_amount_hint"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:inputType="number"/>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/label_donate_submit" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>